[project]
name = "manim-rrl"
version = "0.1.0"
description = "FastAPI server wrapping Manim to simulate RR Lyrae variable stars"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "manim>=0.18.0",
    "numpy>=1.26.0",
    "playwright>=1.60.0",
]
